--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
-body{
-  background: #EEEE;
-   
-}
-.hello:checked{
-  color: rgb(0, 118, 0);
 
+body {
+  background: #eeee;
 }
- 
+
+.hello:checked {
+  color: rgb(0, 118, 0);
+}
